# CHAI

./: .env.example  .gitignore  .gitmodules  CHAISobel.c  CHAISobelAdjusted.c  Dockerfile  LICENSE  README.md  Sobel.c  clean.py  import matplotlib.jl  install_fused_script.sh  main.py  optimization_metric_plot.py  requirements.txt  setup.sh  sobel_figure.py
benchmark_applications/ar-iclib/: CMakeLists.txt
benchmark_applications/susan-iclib/: CMakeLists.txt  Makefile  eval.ipynb  f1-score.ipynb  input_small.h  susan.c
config/: README.md  config.py  globals.py  hardware_arm_a53.json  hardware_custom.json  hardware_msp430.json
docs/: ADDING_NEW_TECHNIQUES.md  TECHNIQUE_AUTO_INTEGRATION.md  WORKFLOW_DETAILED.md
eval-apps/: CMakeLists.txt  env
eval-apps/accept-activityrec/: CMakeLists.txt  Makefile  application.txt  apx_all.json  baseline_main.c  ground_truth.csv  main  main.c  quick_sweep.py  set_best_knobs.py  sweep_knobs.py  test_fixed.py
eval-apps/stringsearch-iclib/: CMakeLists.txt  Makefile
fusedBin/: find_optimals.py  requirements.txt  rt_plotter.py
lib/: README.md  bo.py  constraint_gatekeeper.py  hardware_cost_model.py  hardware_profile.py  hw_observability.py  hw_validator.py  llm.py  lsp.py  pdg.py  prompt_updater.py  technique_card_schema.py  technique_registry.py
prompts/: annotate_vPDG1.txt  approximate_vPDG1.txt  approximation_techniques.txt  code_summary.txt  compilerRTL.txt  convert_json.txt  error_handling.txt  manufactured_code_base_summary.txt  planning_step.txt  purpose_id_vPDG1.txt  system_prompt.txt  target_functions.txt
scripts/: demo_hardware_profiles.py
tests/: conftest.py  test_technique_integration.py
tools/: add_technique.py
(+154 files in other folders)
